# type-pg

./: .gitignore  CHANGELOG.md  README.md  cli.py  main.py  pyproject.toml  requirements.txt  semantic.toml  test
app/: __init__.py  config.py  utils.py
app/parser/: __init__.py  database.py  errors.py
app/parser/properties/: __init__.py  bool.py  bytes.py  date.py  datetime.py  dict.py  enum_property.py  float.py  int.py  list_property.py  model_property.py  none.py  property.py  protocol.py  str_property.py  time.py  types.py
app/postgres/: __init__.py  data_type.py  db.py
app/postgres/schema/: __init__.py  database.py  object_type.py  routine.py  schema.py  table.py
app/templates/: helpers.jinja  models_init.py.jinja  project_init.py.jinja  routine.py.jinja  schema_init.py.jinja
type_pg/: __init__.py  cli.py  config.py  utils.py
type_pg/parser/: __init__.py  database.py  errors.py
type_pg/parser/properties/: __init__.py  bool.py  bytes.py  date.py  datetime.py  dict.py  enum_property.py  float.py  int.py  json.py  list_property.py  model_property.py  none.py  property.py  protocol.py  str_property.py  time.py  types.py
type_pg/postgres/: __init__.py  db.py
type_pg/postgres/schema/: __init__.py  database.py  object_type.py  routine.py  schema.py  table.py
type_pg/templates/: model.py.jinja  routine.py.jinja  schema_init.py.jinja  sync_routine.py.jinja
